--- a/Task_2_Marks_Sutika/SapnuBanka.html
+++ b/Task_2_Marks_Sutika/SapnuBanka.html
@@ -71,13 +71,12 @@
 <div class="foot2"></div>
 <div class="foot-logo"><img src="./assets/img/GoldenV2Logo.png" alt=""></div>
 <div class="apks-text1">© SparkleHeart 2020. Visas tiesības aizsargātas.</div>
-<div class="foot-idea">Ideja</div>
-<div class="foot-piesaki">Piesaki Sapni</div>
-<div class="foot-uznem">Uzņēmējiem</div>
-<div class="foot-sapnu-b">Sapņu banka</div>
-<div class="foot-sapnu-a">Sapņus atbalsta</div>
-<div class="foot-iedvesma">Iedvesmas stāsti</div>
-<div class="foot-biedriba">Biedrība SparkleHeart</div>
+<div class="foot-idea" onclick="window.location.href='../Task_2_Marks_Sutika/ideja.html'">Ideja</div>
+<div class="foot-piesaki" onclick="window.location.href='../Task_2_Marks_Sutika/PiesakiSapni.html'">Piesaki Sapni</div>
+<div class="foot-uznem" onclick="window.location.href='../Task_2_Marks_Sutika/uznemejiem.html'">Uzņēmējiem</div>
+<div class="foot-sapnu-b" onclick="window.location.href='../Task_2_Marks_Sutika/SapnuBanka.html'">Sapņu banka</div>
+<div class="foot-sapnu-a" onclick="window.location.href='../Task_2_Marks_Sutika/SapnuAtbalsts.html'">Sapņus atbalsta</div>
+<div class="foot-biedriba" >Biedrība SparkleHeart</div>
 <div class="foot-reg-nr">Reģistrācijas nr. 40008293119</div>
 <div class="foot-banka">Banka: SWEDBANK A/S</div>
 <div class="foot-lv52">LV52HABA0551047652465</div>
@@ -85,11 +84,22 @@
 <div class="foot-mail">
 juris.gogulis@sparkleheart.org</div>
 <div class="foot-tel">+37126890034</div>
-<div class="foot-adress">Biķernieku iela 24a - 5, LV-1006</div>
+<a href="https://www.google.com/maps/place/Bi%C4%B7ernieku+iela+24A,+Vidzemes+priek%C5%A1pils%C4%93ta,+R%C4%ABga,+LV-1006/@56.9702273,24.1812923,17z/data=!3m1!4b1!4m6!3m5!1s0x46eece5e0ade6659:0xa50c82ee82c56df0!8m2!3d56.9702273!4d24.1838726!16s%2Fg%2F11qm6d_23d" target="_blank"><div class="foot-adress" >Biķernieku iela 24a - 5, LV-1006</div></a>
 <div class="foot-politika">Privātuma politika</div>
 
-<div class="facebook"><img src="./assets/img/facebook.png" alt=""></div>
-<div class="insta"><img src="./assets/img/insta.png" alt=""></div>
+
+
+<a href="https://www.facebook.com/sparkleheartLV" target="_blank">
+  <div class="facebook">
+    <img src="./assets/img/facebook.png" alt="">
+  </div>
+</a>
+
+<a href="https://www.instagram.com/sparkleheart_org/" target="_blank">
+  <div class="insta">
+    <img src="./assets/img/insta.png" alt="">
+  </div>
+</a>
 
 </footer>
 <script>
